--- a/src/components/CaesarCipher.css
+++ b/src/components/CaesarCipher.css
@@ -148,6 +148,22 @@
   margin: 1rem 0;
   word-spacing: 0.5rem;
   line-height: 4rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.message-word {
+  display: flex;
+  margin: 0 0.5rem 1rem 0.5rem;
+}
+
+.space-character {
+  display: inline-block;
+  width: 1rem;
+  height: 2rem;
+  line-height: 2rem;
+  margin: 0 0.25rem;
 }
 
 .letter {
