--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #1a1a1a;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,6 +19,7 @@ body, html {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+  background-color: #1a1a1a;
 }
 
 #root {
@@ -27,6 +28,9 @@ body, html {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #1a1a1a;
+  border: none;
+  outline: none;
 }
 
 a {
